release 1.2 (03-2010)
- Fixed issue 468
  https://jersey.dev.java.net/issues/show_bug.cgi?id=468
  If URI canonicalization, and optionally URI normalization is set to true, but
  redirection is set to false (the default) then the request URI is modified to
  be the canonicalized, and optionally normalized, URI.
- Fixed issue 464
  https://jersey.dev.java.net/issues/show_bug.cgi?id=464
  Change the context related methods from private to protected.
- Fixed issue 466
  https://jersey.dev.java.net/issues/show_bug.cgi?id=466
  Avoid generation of empty params in WADL.
- Fixed issue 459
  https://jersey.dev.java.net/issues/show_bug.cgi?id=459
  A 307 (Temporary redirect) response for a resource which has a path
  ending in '/' has a correct full request URI, including query parameters (if present),
  for the Location header.
- Fixed issue 467
  https://jersey.dev.java.net/issues/show_bug.cgi?id=467
  @Inject can be utilized on provider-based classes.

release 1.1.5 (20-01-2010)
- Fixed issue 437
  https://jersey.dev.java.net/issues/show_bug.cgi?id=437
  Support the parsing of the Cache-Control header.
- Fixed issue 454
  https://jersey.dev.java.net/issues/show_bug.cgi?id=454
  Scanning of classes WEB-INF/classes in a war in ear now works for JBoss 5.x
  deployments.
- Fixed issue 456
  https://jersey.dev.java.net/issues/show_bug.cgi?id=456
  UriBuilder can be built from URIs whose authority component is a
  registry based naming authority.
- When tracing is enabled exceptions that are mapped to responses will be
  logged.
- Added formatted support when JSON with natural notation is used
- Fixed issue 362
  https://jersey.dev.java.net/issues/show_bug.cgi?id=362
  Deprecated HttpHelper.getAcceptLangauge and added new method
  HttpHelper.getAcceptLanguage.
- Fixed issue 448
  https://jersey.dev.java.net/issues/show_bug.cgi?id=448
  Ensure that spring 2.5.x dependency version does not depend on Spring 3.0.
- Fixed issue 450